-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.1, 5.8.0 RC
-
None
http://doc.qt.io/qt-5/qstylehints.html
true and false words are missing for the following properties:
- showIsFullScreen
- showIsMaximized
- useRtlExtensions
- setFocusOnTouchRelease
- singleClickActivation
https://github.com/qt/qtbase/blob/dev/src/gui/kernel/qstylehints.cpp#L332
It seems like all "\c true" and "\c false" are replaced with spaces for some reason.
For Gerrit Dashboard: QTBUG-58212 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
182552,3 | Doc: Fix issues in QStyleHints documentation | dev | qt/qtbase | Status: MERGED | +2 | 0 |