src/gui/kernel/qstylehints.cpp
@@ -329,7 +329,9 @@ int QStyleHints::cursorFlashTime() const
 
 /*!
     \property QStyleHints::showIsFullScreen
-    \brief \c true if the platform defaults to windows being fullscreen,
+    \brief whether the platform defaults to fullscreen windows.
+
+    This property is \c true if the platform defaults to windows being fullscreen,
     otherwise \c false.
 
     \note The platform may still choose to show certain windows non-fullscreen,
@@ -344,7 +346,9 @@ bool QStyleHints::showIsFullScreen() const
 
 /*!
     \property QStyleHints::showIsMaximized
-    \brief \c true if the platform defaults to windows being maximized,
+    \brief whether the platform defaults to maximized windows.
+
+    This property is \c true if the platform defaults to windows being maximized,
     otherwise \c false.
 
     \note The platform may still choose to show certain windows non-maximized,
@@ -389,7 +393,9 @@ qreal QStyleHints::fontSmoothingGamma() const
 
 /*!
     \property QStyleHints::useRtlExtensions
-    \brief \c true if right-to-left writing direction is enabled,
+    \brief the writing direction.
+
+    This property is \c true if right-to-left writing direction is enabled,
     otherwise \c false.
 */
 bool QStyleHints::useRtlExtensions() const
@@ -399,7 +405,9 @@ bool QStyleHints::useRtlExtensions() const
 
 /*!
     \property QStyleHints::setFocusOnTouchRelease
-    \brief \c true if focus objects (line edits etc) should receive
+    \brief the event that should set input focus on focus objects.
+
+    This property is \c true if focus objects (line edits etc) should receive
     input focus after a touch/mouse release. This is normal behavior on
     touch platforms. On desktop platforms, the standard is to set
     focus already on touch/mouse press.
@@ -443,7 +451,9 @@ void QStyleHints::setTabFocusBehavior(Qt::TabFocusBehavior tabFocusBehavior)
 
 /*!
     \property QStyleHints::singleClickActivation
-    \brief \c true if items should be activated by single click, \b false
+    \brief whether items are activated by single or double click.
+
+    This property is \c true if items should be activated by single click, \c false
     if they should be activated by double click instead.
 
     \since 5.5
@@ -455,7 +465,9 @@ bool QStyleHints::singleClickActivation() const
 
 /*!
     \property QStyleHints::useHoverEffects
-    \brief \c true if UI elements should use hover effects. This is the
+    \brief whether UI elements use hover effects.
+
+    This property is \c true if UI elements should use hover effects. This is the
     standard behavior on desktop platforms with a mouse pointer, whereas
     on touch platforms the overhead of hover event delivery can be avoided.
 
